--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -17,16 +17,18 @@
     "@material-ui/core": "^3.0.3",
     "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
-    "babel-loader": "7",    
+    "babel-loader": "7",
     "css-loader": "^1.0.0",
     "file-loader": "^2.0.0",
     "history": "^4.7.2",
     "image-webpack-loader": "^4.4.0",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
+    "react-number-format": "^4.0.5",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-sidebar": "^3.0.2",
+    "react-text-mask": "^5.4.3",
     "reactstrap": "^6.4.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
