--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "start": "webpack-dev-server --config ./webpack.config.js --mode development"
+    "start": "webpack-dev-server --config ./webpack.config.js --mode development",
+    "build": "webpack --mode development"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -14,14 +15,18 @@
     "webpack-dev-server": "^3.1.8"
   },
   "dependencies": {
+    "@date-io/date-fns": "^0.0.2",
     "@material-ui/core": "^3.0.3",
     "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
     "babel-loader": "7",
     "css-loader": "^1.0.0",
+    "date-fns": "^2.0.0-alpha.26",
     "file-loader": "^2.0.0",
     "history": "^4.7.2",
     "image-webpack-loader": "^4.4.0",
+    "material-ui-next-pickers": "^0.0.16",
+    "material-ui-pickers": "^2.0.4",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-number-format": "^4.0.5",
