--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.config.js --mode development",
-    "build": "webpack --mode development"
+    "build": "webpack --mode production"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
