--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.config.js --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production --colors --display"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -9,6 +9,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "progress-bar-webpack-plugin": "^1.11.0",
     "react-hot-loader": "^4.3.7",
     "webpack": "^4.18.1",
     "webpack-cli": "^3.1.0",
