--- a/Tests/Cashflow.Tests.csproj
+++ b/Tests/Cashflow.Tests.csproj
@@ -14,7 +14,11 @@
   </ItemGroup> -->
 
   <ItemGroup>
-    <ProjectReference Include="..\Api\Api.csproj" />
+    <ProjectReference Include="..\Api\Cashflow.Api.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MSTest.TestFramework" Version="2.1.0" />
   </ItemGroup>
 
 </Project>
