--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -1,6 +1,4 @@
 {
-  "ConnectionStrings": {
-    "FinanceDB": "Host=127.0.0.1;Port=5432;Pooling=true;Database=finance;User Id=postgres;Password=123"
-  },
-  "FinanceJwtKey": "!@#$%&*()SecretKey!WebApi!@#$%&*()"
+  "ConnectionString": "Host=172.17.0.2;Port=5432;Pooling=true;Database=cashflow;User Id=postgres;Password=123",
+  "JwtKey": "!@#$%&*()SecretKey!WebApi!@#$%&*()"
 }
