--- a/Api/Cashflow.Api.csproj
+++ b/Api/Cashflow.Api.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.30" />
+    <PackageReference Include="fluentvalidation" Version="8.6.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.2" />
     <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="3.1.2" />
     <PackageReference Include="Npgsql" Version="4.1.3.1" />
@@ -23,10 +24,12 @@
 
   <ItemGroup>
     <Content Remove="Infra/Resources/User/GetByEmail.sql" />
+    <Content Remove="Infra/Resources/User/Insert.sql" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="Infra/Resources/User/GetByEmail.sql" />
+    <EmbeddedResource Include="Infra/Resources/User/Insert.sql" />
   </ItemGroup>
 
 </Project>
