--- a/Api/Cashflow.Api.csproj
+++ b/Api/Cashflow.Api.csproj
@@ -25,11 +25,21 @@
   <ItemGroup>
     <Content Remove="Infra/Resources/User/GetByEmail.sql" />
     <Content Remove="Infra/Resources/User/Insert.sql" />
+
+    <Content Remove="Infra/Resources/CreditCard/Delete.sql" />
+    <Content Remove="Infra/Resources/CreditCard/GetByUser.sql" />
+    <Content Remove="Infra/Resources/CreditCard/Insert.sql" />
+    <Content Remove="Infra/Resources/CreditCard/Update.sql" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="Infra/Resources/User/GetByEmail.sql" />
     <EmbeddedResource Include="Infra/Resources/User/Insert.sql" />
+
+    <EmbeddedResource Include="Infra/Resources/CreditCard/Delete.sql" />
+    <EmbeddedResource Include="Infra/Resources/CreditCard/GetByUser.sql" />
+    <EmbeddedResource Include="Infra/Resources/CreditCard/Insert.sql" />
+    <EmbeddedResource Include="Infra/Resources/CreditCard/Update.sql" />
   </ItemGroup>
 
 </Project>
