Installments crud with payments
Signed-off-by: Santos Gabriel <gabrielsantoscimol@gmail.com>

--- a/Api/Cashflow.Api.csproj
+++ b/Api/Cashflow.Api.csproj
@@ -46,6 +46,9 @@
     <EmbeddedResource Include="Infra/Resources/Payment/GetByUser.sql" />
     <EmbeddedResource Include="Infra/Resources/Payment/Insert.sql" />
     <EmbeddedResource Include="Infra/Resources/Payment/Update.sql" />
+
+    <EmbeddedResource Include="Infra/Resources/Installment/Insert.sql" />
+    <EmbeddedResource Include="Infra/Resources/Installment/Delete.sql" />
   </ItemGroup>
 
 </Project>
