--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
-    "start": "webpack-dev-server --config ./webpack.config.js --mode development",
-    "build": "webpack --mode production --colors --display"
+    "start": "webpack-dev-server --hot --config ./webpack.config.js --mode development",
+    "build": "webpack --mode development --colors --display",
+    "build:prod": "webpack --mode production --colors --display"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -21,16 +22,19 @@
     "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
     "babel-loader": "7",
+    "clean-webpack-plugin": "^2.0.2",
     "css-loader": "^1.0.0",
     "date-fns": "^2.0.0-alpha.26",
     "file-loader": "^2.0.0",
     "history": "^4.7.2",
+    "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.4.0",
     "material-ui-next-pickers": "^0.0.16",
     "material-ui-pickers": "^2.0.4",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
-    "react-number-format": "^4.0.5",
+    "react-masked-text": "^0.4.1",
+    "react-number-format": "^4.0.7",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-sidebar": "^3.0.2",
