--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -1,4 +1,10 @@
 {
-  "ConnectionString": "Host=172.17.0.2;Port=5432;Pooling=true;Database=cashflow;User Id=postgres;Password=123",
-  "JwtKey": "!@#$%&*()SecretKey!WebApi!@#$%&*()"
+  "Logging": {
+    "IncludeScopes": false,
+    "LogLevel": {
+      "Default": "Trace",
+      "System": "Information",
+      "Microsoft": "None"
+    }
+  }
 }
