--- a/Migrations/Migrations.csproj
+++ b/Migrations/Migrations.csproj
@@ -2,13 +2,17 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netcoreapp5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentMigrator" Version="3.2.1" />
-    <PackageReference Include="FluentMigrator.Runner" Version="3.2.1" />
-    <PackageReference Include="FluentMigrator.Runner.Postgres" Version="3.2.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FluentMigrator" Version="3.2.16" />
+    <PackageReference Include="FluentMigrator.Runner" Version="3.2.16" />
+    <PackageReference Include="FluentMigrator.Runner.Postgres" Version="3.2.16" />
+    <PackageReference Include="Npgsql" Version="5.0.5" />
   </ItemGroup>
 
 </Project>
