--- a/Api/Cashflow.Api.csproj
+++ b/Api/Cashflow.Api.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="dapper" Version="2.0.90" />
     <PackageReference Include="fluentvalidation" Version="10.1.0" />
+    <PackageReference Include="log4net" Version="2.0.12" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.5" />
     <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="5.0.5" />
     <PackageReference Include="Npgsql" Version="5.0.4" />
@@ -29,6 +30,7 @@
 
     <EmbeddedResource Include="Infra/Resources/Salary/Insert.sql" />
     <EmbeddedResource Include="Infra/Resources/Salary/Delete.sql" />
+    <EmbeddedResource Include="Infra/Resources/Salary/GetById.sql" />
     <EmbeddedResource Include="Infra/Resources/Salary/GetByUser.sql" />
     <EmbeddedResource Include="Infra/Resources/Salary/Update.sql" />
 
