--- a/Site/.babelrc
+++ b/Site/.babelrc
@@ -1,7 +1,10 @@
 {
   "presets": [
-    "env",
-    "react",
-    "stage-2"
+    "@babel/preset-env",
+    "@babel/preset-react"
+  ],
+  "plugins": [
+    // "transform-class-properties",
+    // "transform-object-rest-spread"
   ]
 }
