--- a/Site/package.json
+++ b/Site/package.json
@@ -1,52 +1,44 @@
 {
   "scripts": {
-    "start": "webpack-dev-server --hot --config ./webpack.config.js --mode development",
+    "start": "webpack serve --hot --config ./webpack.config.js --mode development",
     "build": "webpack --mode development --colors --display",
     "build:prod": "webpack --mode production --colors --display"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
     "babel-core": "^6.26.3",
-    "babel-jest": "^23.6.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "progress-bar-webpack-plugin": "^1.11.0",
-    "react-hot-loader": "^4.3.7",
-    "webpack": "^4.18.1",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.8"
+    "babel-jest": "^27.0.2",
+    "babel-loader": "^8.2.2",
+    "progress-bar-webpack-plugin": "^2.1.0",
+    "react-hot-loader": "^4.13.0",
+    "webpack": "^5.39.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "@date-io/date-fns": "^0.0.2",
-    "@material-ui/core": "^3.0.3",
-    "@material-ui/icons": "^3.0.1",
-    "axios": "^0.18.0",
-    "babel-loader": "7",
-    "clean-webpack-plugin": "^2.0.2",
-    "css-loader": "^1.0.0",
-    "date-fns": "^2.0.0-alpha.26",
-    "file-loader": "^2.0.0",
-    "history": "^4.7.2",
-    "html-webpack-plugin": "^3.2.0",
-    "image-webpack-loader": "^4.4.0",
-    "material-ui-next-pickers": "^0.0.16",
-    "material-ui-pickers": "^2.0.4",
-    "react": "^16.5.0",
-    "react-dom": "^16.5.0",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "axios": "^0.21.1",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "css-loader": "^5.2.6",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.1",
+    "react": "^17.0.2",
+    "react-datepicker": "^4.1.1",
+    "react-dom": "^17.0.2",
     "react-masked-text": "^0.4.1",
-    "react-number-format": "^4.0.7",
-    "react-redux": "^5.0.7",
-    "react-router-dom": "^4.3.1",
+    "react-number-format": "^4.6.3",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "react-sidebar": "^3.0.2",
     "react-text-mask": "^5.4.3",
-    "reactstrap": "^6.4.0",
-    "redux": "^4.0.1",
+    "reactstrap": "^8.9.0",
+    "recharts": "^2.0.9",
+    "redux": "^4.1.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "style-loader": "^0.23.1",
-    "styled-components": "^4.0.0",
-    "sweetalert-react": "^0.4.11",
-    "sweetalert2-react": "^0.7.2",
-    "ttf-loader": "^1.0.2"
+    "style-loader": "^2.0.0",
+    "styled-components": "^5.3.0"
   }
 }
