--- a/Site/package.json
+++ b/Site/package.json
@@ -33,6 +33,7 @@
     "react-router-dom": "^5.2.0",
     "react-sidebar": "^3.0.2",
     "react-text-mask": "^5.4.3",
+    "react-toastify": "^7.0.4",
     "reactstrap": "^8.9.0",
     "recharts": "^2.0.9",
     "redux": "^4.1.0",
