--- a/Site/package.json
+++ b/Site/package.json
@@ -10,6 +10,8 @@
     "babel-core": "^6.26.3",
     "babel-jest": "^27.0.2",
     "babel-loader": "^8.2.2",
+    "eslint": "^7.29.0",
+    "eslint-plugin-react": "^7.24.0",
     "progress-bar-webpack-plugin": "^2.1.0",
     "react-hot-loader": "^4.13.0",
     "webpack": "^5.39.0",
