--- a/Site/package.json
+++ b/Site/package.json
@@ -1,8 +1,8 @@
 {
   "scripts": {
     "start": "webpack serve --hot --config ./webpack.config.js --mode development",
-    "build": "webpack --mode development --colors --display",
-    "build:prod": "webpack --mode production --colors --display"
+    "build": "webpack --mode development",
+    "build:prod": "webpack --mode production"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.14.5",
