--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,24 @@
 version: '2.2'
 
 services:
+
+    site:
+        environment:
+            - DATABASE_CONNECTION_STRING=Host=172.30.30.10;Port=5432;Pooling=true;User Id=postgres;Password=Postgres123
+            - COOKIE_EXPIRES_IN_MINUTES=1
+            - SECRET_JWT_KEY=utohWai7Iefa2loo7aeYeCo3HeWahpoKi5
+        image: sgtux/cashflow-app
+        networks:
+            lan:
+                ipv4_address: 172.30.30.20
+
     database:
         environment:
             - POSTGRES_PASSWORD=Postgres123
         image: postgres
         networks:
             lan:
-                ipv4_address: 172.30.30.10  
+                ipv4_address: 172.30.30.10
   
 networks:
     lan:
