--- a/Api/Cashflow.Api.csproj
+++ b/Api/Cashflow.Api.csproj
@@ -48,6 +48,7 @@
     <EmbeddedResource Include="Infra/Sql/DailyExpenses/Delete.sql" />
     <EmbeddedResource Include="Infra/Sql/DailyExpenses/DeleteItems.sql" />
     <EmbeddedResource Include="Infra/Sql/DailyExpenses/GetByUser.sql" />
+    <EmbeddedResource Include="Infra/Sql/DailyExpenses/GetById.sql" />
     <EmbeddedResource Include="Infra/Sql/DailyExpenses/Insert.sql" />
     <EmbeddedResource Include="Infra/Sql/DailyExpenses/InsertItem.sql" />
     <EmbeddedResource Include="Infra/Sql/DailyExpenses/Update.sql" />
