--- a/Api/Cashflow.Api.csproj
+++ b/Api/Cashflow.Api.csproj
@@ -52,6 +52,8 @@
     <EmbeddedResource Include="Infra/Sql/DailyExpenses/Insert.sql" />
     <EmbeddedResource Include="Infra/Sql/DailyExpenses/InsertItem.sql" />
     <EmbeddedResource Include="Infra/Sql/DailyExpenses/Update.sql" />
+
+    <EmbeddedResource Include="Infra/Sql/Vehicle/Insert.sql" />
   </ItemGroup>
 
 </Project>
