Redirect front to https

--- a/Api/log4net.config
+++ b/Api/log4net.config
@@ -1,6 +1,6 @@
 <log4net>
     <appender name="RollingFileAppenderDebug" type="log4net.Appender.RollingFileAppender">
-        <file value=".\logs\Cashflow-Api-Debug-log.txt" />
+        <file value="logs/Cashflow-Api-Debug-log.txt" />
         <PreserveLogFileNameExtension value="true" />
         <appendToFile value="true" />
         <rollingStyle value="Size" />
@@ -17,7 +17,7 @@
         </filter>
     </appender>
     <appender name="RollingFileAppenderInfo" type="log4net.Appender.RollingFileAppender">
-      <file value=".\logs\Cashflow-Api-Info-log.txt" />
+      <file value="logs/Cashflow-Api-Info-log.txt" />
       <PreserveLogFileNameExtension value="true" />
       <appendToFile value="true" />
       <rollingStyle value="Size" />
@@ -34,7 +34,7 @@
         </filter>
     </appender>
     <appender name="RollingFileAppenderError" type="log4net.Appender.RollingFileAppender">
-        <file value=".\logs\Cashflow-Api-Error-log.txt" />
+        <file value="logs/Cashflow-Api-Error-log.txt" />
         <PreserveLogFileNameExtension value="true" />
         <appendToFile value="true" />
         <rollingStyle value="Size" />
