--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,17 @@ version: '2.2'
 
 services:
 
-    # site:
-    #     environment:
-    #         - DATABASE_CONNECTION_STRING=Host=172.30.30.10;Port=5432;Pooling=true;User Id=postgres;Password=Postgres123
-    #         - COOKIE_EXPIRES_IN_MINUTES=1
-    #         - SECRET_JWT_KEY=utohWai7Iefa2loo7aeYeCo3HeWahpoKi5
-    #     image: sgtux/cashflow-site
-    #     networks:
-    #         lan:
-    #             ipv4_address: 172.30.30.20
+    site:
+        environment:
+            - DATABASE_CONNECTION_STRING=Host=172.30.30.10;Port=5432;Pooling=true;User Id=postgres;Password=Postgres123
+            - COOKIE_EXPIRES_IN_MINUTES=120
+            - SECRET_JWT_KEY=utohWai7Iefa2loo7aeYeCo3HeWahpoKi5
+        image: sgtux/cashflow
+        networks:
+            lan:
+                ipv4_address: 172.30.30.20
+        ports:
+            - "8090:80"
 
     database:
         environment:
