--- a/Api/Cashflow.Api.csproj
+++ b/Api/Cashflow.Api.csproj
@@ -54,6 +54,7 @@
     <EmbeddedResource Include="Infra/Sql/DailyExpenses/Update.sql" />
 
     <EmbeddedResource Include="Infra/Sql/Vehicle/Insert.sql" />
+    <EmbeddedResource Include="Infra/Sql/Vehicle/GetById.sql" />
   </ItemGroup>
 
 </Project>
