--- a/Api/Cashflow.Api.csproj
+++ b/Api/Cashflow.Api.csproj
@@ -53,6 +53,7 @@
     <EmbeddedResource Include="Infra/Sql/DailyExpenses/InsertItem.sql" />
     <EmbeddedResource Include="Infra/Sql/DailyExpenses/Update.sql" />
 
+    <EmbeddedResource Include="Infra/Sql/Vehicle/Delete.sql" />
     <EmbeddedResource Include="Infra/Sql/Vehicle/GetById.sql" />
     <EmbeddedResource Include="Infra/Sql/Vehicle/GetByUser.sql" />
     <EmbeddedResource Include="Infra/Sql/Vehicle/Insert.sql" />
