Task #204 - Criar método de criar gasto de combustível

--- a/Api/Cashflow.Api.csproj
+++ b/Api/Cashflow.Api.csproj
@@ -58,6 +58,8 @@
     <EmbeddedResource Include="Infra/Sql/Vehicle/GetByUser.sql" />
     <EmbeddedResource Include="Infra/Sql/Vehicle/Insert.sql" />
     <EmbeddedResource Include="Infra/Sql/Vehicle/Update.sql" />
+
+    <EmbeddedResource Include="Infra/Sql/FuelExpenses/Insert.sql" />
   </ItemGroup>
 
 </Project>
