--- a/Api/Cashflow.Api.csproj
+++ b/Api/Cashflow.Api.csproj
@@ -59,6 +59,7 @@
     <EmbeddedResource Include="Infra/Sql/Vehicle/Insert.sql" />
     <EmbeddedResource Include="Infra/Sql/Vehicle/Update.sql" />
 
+    <EmbeddedResource Include="Infra/Sql/FuelExpenses/Delete.sql" />
     <EmbeddedResource Include="Infra/Sql/FuelExpenses/GetById.sql" />
     <EmbeddedResource Include="Infra/Sql/FuelExpenses/Insert.sql" />
     <EmbeddedResource Include="Infra/Sql/FuelExpenses/Update.sql" />
