--- a/Site/package.json
+++ b/Site/package.json
@@ -1,47 +1,47 @@
 {
   "scripts": {
-    "start": "webpack serve --hot --config ./webpack.config.js --mode development",
+    "start": "webpack serve --config ./webpack.config.js --mode development",
     "build": "webpack --mode development",
     "build:prod": "webpack --mode production"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.14.5",
-    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-env": "^7.16.4",
+    "@babel/preset-react": "^7.16.0",
     "babel-core": "^6.26.3",
-    "babel-jest": "^27.0.2",
-    "babel-loader": "^8.2.2",
-    "eslint": "^7.29.0",
-    "eslint-plugin-react": "^7.24.0",
+    "babel-jest": "^27.4.0",
+    "babel-loader": "^8.2.3",
+    "eslint": "^8.3.0",
+    "eslint-plugin-react": "^7.27.1",
     "progress-bar-webpack-plugin": "^2.1.0",
     "react-hot-loader": "^4.13.0",
-    "webpack": "^5.39.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "webpack": "^5.64.4",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.6.0"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.4",
+    "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
-    "axios": "^0.21.1",
-    "clean-webpack-plugin": "^4.0.0-alpha.0",
-    "css-loader": "^5.2.6",
+    "axios": "^0.24.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.5.1",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.3.1",
+    "html-webpack-plugin": "^5.5.0",
     "react": "^17.0.2",
-    "react-datepicker": "^4.1.1",
+    "react-datepicker": "^4.4.0",
     "react-dom": "^17.0.2",
     "react-masked-text": "^0.4.1",
-    "react-number-format": "^4.6.3",
-    "react-redux": "^7.2.4",
-    "react-router-dom": "^5.2.0",
+    "react-number-format": "^4.8.0",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.0.2",
     "react-sidebar": "^3.0.2",
     "react-text-mask": "^5.4.3",
-    "react-toastify": "^7.0.4",
-    "reactstrap": "^8.9.0",
-    "recharts": "^2.0.9",
-    "redux": "^4.1.0",
+    "react-toastify": "^8.1.0",
+    "reactstrap": "^9.0.1",
+    "recharts": "^2.1.6",
+    "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
-    "style-loader": "^2.0.0",
-    "styled-components": "^5.3.0"
+    "redux-thunk": "^2.4.1",
+    "style-loader": "^3.3.1",
+    "styled-components": "^5.3.3"
   }
 }
