--- a/App/cashflow_app/android/app/build.gradle
+++ b/App/cashflow_app/android/app/build.gradle
@@ -54,8 +54,8 @@ android {
         targetSdkVersion 30
         // versionCode flutterVersionCode.toInteger()
         // versionName flutterVersionName
-        versionCode 2
-        versionName "2.0"
+        versionCode 4
+        versionName "Versão: 4.0"
     }
 
     signingConfigs {
