--- a/Site/.babelrc
+++ b/Site/.babelrc
@@ -4,7 +4,6 @@
     "@babel/preset-react"
   ],
   "plugins": [
-    // "transform-class-properties",
-    // "transform-object-rest-spread"
+    "@babel/plugin-transform-runtime"
   ]
 }
