--- a/Site/package.json
+++ b/Site/package.json
@@ -5,6 +5,7 @@
     "build:prod": "webpack --mode production"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.16.8",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
     "babel-core": "^6.26.3",
