--- a/Api/Cashflow.Api.csproj
+++ b/Api/Cashflow.Api.csproj
@@ -64,6 +64,7 @@
 
     <EmbeddedResource Include="Infra/Sql/RemainingBalance/Delete.sql" />
     <EmbeddedResource Include="Infra/Sql/RemainingBalance/GetByMonthYear.sql" />
+    <EmbeddedResource Include="Infra/Sql/RemainingBalance/GetSome.sql" />
     <EmbeddedResource Include="Infra/Sql/RemainingBalance/Insert.sql" />
     <EmbeddedResource Include="Infra/Sql/RemainingBalance/Update.sql" />
 
