--- a/App/cashflow_app/android/app/src/main/AndroidManifest.xml
+++ b/App/cashflow_app/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.household_expences_control">
+    package="com.household_expences_control_1">
   <uses-permission android:name="android.permission.INTERNET"/>
    <application
         android:label="Controlador de Despesas Domésticas"
@@ -7,6 +7,7 @@
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
+            android:exported="true"
             android:theme="@style/LaunchTheme"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
             android:hardwareAccelerated="true"
