--- a/Api/Cashflow.Api.csproj
+++ b/Api/Cashflow.Api.csproj
@@ -23,6 +23,7 @@
     <EmbeddedResource Include="Infra/Sql/User/GetByNickName.sql" />
     <EmbeddedResource Include="Infra/Sql/User/GetById.sql" />
     <EmbeddedResource Include="Infra/Sql/User/Insert.sql" />
+    <EmbeddedResource Include="Infra/Sql/User/UpdateSpendingCeiling.sql" />
 
     <EmbeddedResource Include="Infra/Sql/Earning/Insert.sql" />
     <EmbeddedResource Include="Infra/Sql/Earning/Delete.sql" />
