--- a/Api/Properties/launchSettings.json
+++ b/Api/Properties/launchSettings.json
@@ -22,7 +22,7 @@
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "DATABASE_CONNECTION_STRING": "Host=172.31.31.10;Database=cashflow;Port=3306;Pooling=true;user=root;Password=Mysql123",
+        "DATABASE_CONNECTION_STRING": "Host=172.31.31.10;Database=mysql;Port=3306;Pooling=true;user=root;Password=Mysql123",
         "COOKIE_EXPIRES_IN_MINUTES": "1440",
         "SECRET_JWT_KEY": "!@#$%&*()SecretKey!WebApi!@#$%&*()"
       }
