--- a/Api/Properties/launchSettings.json
+++ b/Api/Properties/launchSettings.json
@@ -17,12 +17,12 @@
     },
     "files": {
       "commandName": "Project",
-      "dotnetRunMessages": "true",
+      "dotnetRunMessages": true,
       "launchBrowser": true,
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "DATABASE_CONNECTION_STRING": "Host=172.31.31.10;Database=mysql;Port=3306;Pooling=true;user=root;Password=Mysql123",
+        "DATABASE_CONNECTION_STRING": "Server=172.31.31.10,1433;Database=cashflow;Pooling=true;user=sa;Password=Mssql123",
         "COOKIE_EXPIRES_IN_MINUTES": "1440",
         "SECRET_JWT_KEY": "!@#$%&*()SecretKey!WebApi!@#$%&*()"
       }
