--- a/Migrations/Migrations.csproj
+++ b/Migrations/Migrations.csproj
@@ -14,7 +14,7 @@
     <PackageReference Include="FluentMigrator.Runner.Postgres" Version="3.2.16" />
     <PackageReference Include="FluentMigrator.Runner.SQLite" Version="3.3.1" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.1" />
-    <PackageReference Include="MySqlConnector" Version="2.2.5" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
   </ItemGroup>
 
 </Project>
