--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -6,7 +6,7 @@ name: Build and deploy ASP.Net Core app to Azure Web App - cashfloweb
 on:
   push:
     branches:
-      - issue-108
+      - main
   workflow_dispatch:
 
 jobs:
@@ -15,6 +15,23 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
+      - name: Use Node.JS 18.x
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18.x'
+
+      - name: Run Yarn Install
+        uses: borales/actions-yarn@v4
+        with:
+          cmd: install
+          dir: 'Site'
+
+      - name: Build Production Bundle
+        uses: borales/actions-yarn@v4
+        with:
+          cmd: build:prod
+          dir: 'Site'
 
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
