--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,10 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy ASP.Net Core app to Azure Web App - cashfloweb
+name: Build and Tests
 
 on:
   push:
     branches:
       - '*'
+      - '!main'
   workflow_dispatch:
 
 jobs:
