--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,26 +10,30 @@ on:
 jobs:
   build:
     runs-on: windows-latest
+    name: Build
 
     steps:
-      - uses: actions/checkout@v4
+      - name: git-checkout
+        uses: actions/checkout@v4
 
       - name: Use Node.JS 18.x
         uses: actions/setup-node@v4
         with:
-          node-version: '18.x'
+          node-version: 18
 
-      - name: Run Yarn Install
-        uses: borales/actions-yarn@v4
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
         with:
-          cmd: install
-          dir: 'Site'
+          version: 8
+          run_install: false
+      
+      - name: Install dependencies
+        working-directory: ./Site
+        run: pnpm install
 
       - name: Build Production Bundle
-        uses: borales/actions-yarn@v4
-        with:
-          cmd: build:prod
-          dir: 'Site'
+        working-directory: ./Site
+        run: pnpm build:prod
 
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
