--- a/Site/package.json
+++ b/Site/package.json
@@ -2,49 +2,52 @@
   "scripts": {
     "start": "webpack serve --config ./webpack.config.js --mode development",
     "build": "webpack --mode development",
-    "build:prod": "webpack --mode production",
-    "audit-fix": "yarn-audit-fix --force"
+    "build:prod": "webpack --mode production"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.16.8",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
+    "@babel/runtime": "^7.24.5",
+    "axios": "^1.6.8",
     "babel-core": "^6.26.3",
-    "babel-jest": "^27.4.0",
-    "babel-loader": "^8.2.3",
-    "eslint": "^8.3.0",
+    "babel-jest": "^29.7.0",
+    "babel-loader": "^9.1.3",
+    "eslint": "^9.2.0",
     "eslint-plugin-react": "^7.27.1",
     "progress-bar-webpack-plugin": "^2.1.0",
+    "react": "^18.3.1",
+    "react-datepicker": "^6.9.0",
+    "react-dom": "^18.3.1",
     "react-hot-loader": "^4.13.0",
+    "react-masked-text": "^1.0.2",
+    "react-number-format": "^5.3.4",
+    "react-redux": "^9.1.2",
+    "react-toastify": "^10.0.5",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
+    "style-loader": "^4.0.0",
+    "styled-components": "^6.1.11",
     "webpack": "^5.64.4",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.6.0",
-    "yarn-audit-fix": "^9.3.5"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "axios": "^0.24.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.17",
+    "@mui/material": "^5.15.17",
     "clean-webpack-plugin": "^4.0.0",
-    "css-loader": "^6.5.1",
+    "css-loader": "^7.1.1",
+    "date-fns": "^3.6.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
-    "react": "^17.0.2",
-    "react-datepicker": "^4.4.0",
-    "react-dom": "^17.0.2",
-    "react-masked-text": "^0.4.1",
-    "react-number-format": "^4.8.0",
-    "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-sidebar": "^3.0.2",
     "react-text-mask": "^5.4.3",
-    "react-toastify": "^8.1.0",
     "reactstrap": "^9.0.1",
     "recharts": "^2.1.6",
-    "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.4.1",
-    "style-loader": "^3.3.1",
-    "styled-components": "^5.3.3"
+    "styles": "link:@mui/material/styles"
   }
 }
