--- a/Site/package.json
+++ b/Site/package.json
@@ -20,7 +20,6 @@
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
     "react-hot-loader": "^4.13.0",
-    "react-masked-text": "^1.0.2",
     "react-number-format": "^5.3.4",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
@@ -42,9 +41,9 @@
     "date-fns": "^3.6.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "react-currency-mask": "^1.3.2",
     "react-router-dom": "^6.0.2",
     "react-sidebar": "^3.0.2",
-    "react-text-mask": "^5.4.3",
     "reactstrap": "^9.0.1",
     "recharts": "^2.1.6",
     "redux-logger": "^3.0.6",
