--- a/Api/Cashflow.Api.csproj
+++ b/Api/Cashflow.Api.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="dapper" Version="2.0.90" />
     <PackageReference Include="fluentvalidation" Version="10.1.0" />
     <PackageReference Include="log4net" Version="2.0.12" />
