--- a/Site/package.json
+++ b/Site/package.json
@@ -37,6 +37,7 @@
     "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.17",
     "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.1",
     "date-fns": "^3.6.0",
     "file-loader": "^6.2.0",
