--- a/Site/package.json
+++ b/Site/package.json
@@ -36,6 +36,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
+    "@mui/x-charts": "^7.23.6",
     "@types/react": "^19.0.6",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^12.0.2",
