Issue #175 - Exibir número total de linhas do banco de dados já utilizadas

--- a/Api/Cashflow.Api.csproj
+++ b/Api/Cashflow.Api.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <EmbeddedResource Include="Infra/Sql/User/GetByEmail.sql" />
     <EmbeddedResource Include="Infra/Sql/User/GetById.sql" />
+    <EmbeddedResource Include="Infra/Sql/User/GetTotalRegisters.sql" />    
     <EmbeddedResource Include="Infra/Sql/User/Insert.sql" />
     <EmbeddedResource Include="Infra/Sql/User/Update.sql" />
 
