Issue #175 - Quebra de build (#179)
* Issue #175 - Quebra de build

* Add or update the Azure App Service build and deployment workflow config

* Ajuste deploy

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           version: 8
           run_install: false
-      
+
       - name: Install dependencies
         working-directory: ./Site
         run: pnpm install
@@ -35,7 +35,7 @@ jobs:
         run: pnpm build:prod
 
       - name: Set up .NET Core
-        uses: actions/setup-dotnet@v1
+        uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.x'
           include-prerelease: true
@@ -44,7 +44,7 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
 
       - name: Run Db Migrations
         run: dotnet run --project Migrations/Migrations.csproj
@@ -65,19 +65,20 @@ jobs:
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
       id-token: write #This is required for requesting the JWT
+      contents: read #This is required for actions/checkout
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: cashflow-app
-      
+
       - name: Login to Azure
-        uses: azure/login@v1
+        uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_8866B813804C4A0E940B85A98FD3028D }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_DF8705C0FB1645BCAC8CE05A22D54FC8 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_668D77F4E40146C0B84C449506737539 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_459D85E33CF04D41A60F2A81084A2742 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_3C5705BE32DD4FA8AAED3423A527BAE3 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_D2B70A867C6C4E84B3C3EBAE752E149E }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
