Issue #189 - Unificar tipos de despesas domésticas e tipos de parcelamentos

--- a/Api/Properties/launchSettings.json
+++ b/Api/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
@@ -18,12 +18,12 @@
     "files": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "http://*:5000",
+      "launchBrowser": false,
+      "applicationUrl": "http://*:56666",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DATABASE_CONNECTION_STRING": "Server=172.31.31.10,1433;Database=cashflow;Pooling=true;user=sa;Password=Mssql123;TrustServerCertificate=True;",
-        "COOKIE_EXPIRES_IN_MINUTES": "1440",
+        "COOKIE_EXPIRES_IN_MINUTES": "10080",
         "SECRET_JWT_KEY": "!@#$%&*()SecretKey!WebApi!@#$%&*()",
         "DATA_ENCRYPTION_KEY": "1234567890123456",
         "GOOGLE_CLIENT_ID": "123.apps.googleusercontent.com",
